2008-06-18  Stephen Sinclair <radarsat1@gmail.com>
	* Update AUTHORS
	* Release version 0.25

2008-06-05  Stephen Sinclair <radarsat1@gmail.com>
	* Fix autogen.sh: Use glibtoolize if it exists, for OS X.
	* Fix undefined MSG_NOSIGNAL in testlo.c.
	* Fix warning on lo_message_deserialize().

2008-05-05  Stephen Sinclair <radarsat1@gmail.com>
	* Fix invalid pointer in lo_server_del_method() when doing pattern matching. (Camille Troillard)
	
2008-04-28  Stephen Sinclair <radarsat1@gmail.com>
	* Add support for multicast groups to LibLo.
	* Add test case for sending a crafted packet that would crash a lo_server without validation.
	* Make validation-related functions internal to liblo.
	* Add server input validation along with a function to deserialise an OSC message. (Chris Hixon)
	* Fix bad socket number in lo_client_sockets when a server is freed.

2008-04-21  Stephen Sinclair <radarsat1@gmail.com>
	* Added Daniel Lacroix's patch for level 2 broadcast support.
	* Use resolved IP address to detect broadcast address.

2008-02-25  Stephen Sinclair <radarsat1@gmail.com>
	* Fix bug where curly brackets didn't match the last item in the comma-separated list.

2008-02-20  Stephen Sinclair <radarsat1@gmail.com>
	* Added lo_bundle_free_messages() to free a bundle and the messages it points to. (Kentaro Fukuchi)

2008-01-27  Stephen Sinclair <radarsat1@gmail.com>
	* Fix for lo_message_add(), wrong argument order for lo_message_add_varargs_internal(). (Dave Robillard)
	* Added test case for lo_message_add().

2008-01-20  Stephen Sinclair  <radarsat1@gmail.com>

	* Added lo_message_add_varargs() to play well with C functions taking a variable number of arguments. (Dave Robillard)
	* Avoid unnecessary repetitive reallocation on lo_message_add_*(). (Dave Robillard)
	* Fixed errors related to 64-bit in packing blob and MIDI messages. (Dave Robillard)

2008-01-13  Stephen Sinclair  <radarsat1@gmail.com>

        * Fixed index increment in sendosc.c for string and symbol types
